2008-06-20  Michael Smith <msmith@songbirdnest.com>

	* gst/playback/gstdecodebin2.c:
	  Ensure decodebin2 emits 'drained' signal once, and only once, when all
	  pads are drained.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/vorbis/vorbisenc.c: (gst_vorbis_enc_get_latency),
	(gst_vorbis_enc_src_query), (gst_vorbis_enc_chain):
	Report the encoder latency. Fixes #538232.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (gst_play_bin_get_property),
	(notify_source), (activate_group):
	Implement the source property, emit notify when it changes in the
	underlying uridecodebin.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/seek/seek.c: (stop_cb):
	Free and clear the seek element list so that we don't use invalid
	references when seeking after recreating a gst-launch line.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_query), (gst_base_audio_sink_skew_slaving),
	(gst_base_audio_sink_render):
	Report latency even if we are not live instead of hiding it.
	Take ts-offset and render-delay of the basesink into account when
	scheduling samples.
	Rework the clipping code so that we can take the various offsets into
	account and still do correct clipping.

2008-06-20  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Bump verion back to devel -> 0.10.20.1

2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/tag/tags.c: (gst_tag_image_data_to_image_buffer):
	Don't increase the size of non-string image buffers by one as this
	might in theory confuse decoders. Still increase it by one for string
	image buffers to append '\0'.

2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Antoine Tremblay <hexa00 at gmail dot com>
	
	* gst/gdp/gstgdppay.c: (gst_gdp_pay_reset):
	Fix a buffer memleak and remove a confusing and wrong debug output.
	Fixes bug #538663.

=== release 0.10.20 ===
