@@ -1,5 +1,13 @@
 2008-06-20  Michael Smith <msmith@songbirdnest.com>
 
+	* sys/xvimage/xvimagesink.c:
+	  Don't set colour balance values on the Xv port if the user hasn't
+	  changed them (via properties or the interface). Avoids accumulating
+	  rounding errors for the common case.
+	  Partial fix for bug #537889.
+
+2008-06-20  Michael Smith <msmith@songbirdnest.com>
+
 	* gst/playback/gstdecodebin2.c:
 	  Ensure decodebin2 emits 'drained' signal once, and only once, when all
 	  pads are drained.
